--- a/style/home_page_style.css
+++ b/style/home_page_style.css
@@ -212,3 +212,9 @@ li:nth-child(8), li:nth-child(8) .card {
 	display: block;
 	background-image: linear-gradient(180deg, rgba(60, 26, 229, 0) 0%, #3C1AE5 50%, rgba(60, 26, 229, 0) 100%);
 }
+
+.centered-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
