--- a/style/style.css
+++ b/style/style.css
@@ -250,11 +250,12 @@ image {
     height: 100vh;
     position: fixed;
     background-color: hsl(var(--background-secondary));
-    background-color:rgba(79, 2, 151, 0.27);
-    transition: width .35s cubic-bezier(var(--transition-main), 1);
+    background-color: rgba(79, 2, 151, 0.27);
+    transition: width .35s ease-in-out; /* Cambiato il timing function */
     overflow-y: auto;
     overflow-x: hidden;
 }
+
 #navbar:hover {
     width: 16em;
 }
@@ -268,19 +269,20 @@ image {
 #navbar::-webkit-scrollbar-thumb {
     background-color: hsl(var(--primary));
 }
-.navbar-items {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
+
 /* Navbar Logo */
 .navbar-logo {
     margin: 0 0 2em 0;
     width: 100%;
     height: 5em;
     background: hsl(var(--background-secondary-dark));
-    background-color:rgba(54, 1, 104, 0.27);
+    background-color: rgba(54, 1, 104, 0.27);
+    display: flex;
+    justify-content: center; /* Centra l'immagine orizzontalmente */
+    align-items: center; /* Centra l'immagine verticalmente */
 }
+
+
 .navbar-logo > .navbar-item-inner {
     width: calc(5rem - 8px);
 }
@@ -292,11 +294,19 @@ image {
     fill: hsl(var(--white));
 }
 /* Navbar Items */
+.navbar-items {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+/* Navbar Items */
 .navbar-item {
     padding: 0 .5em;
     width: 100%;
     cursor: pointer;
 }
+
 .navbar-item-inner {
     padding: 1em 0;
     width: 100%;
@@ -304,30 +314,35 @@ image {
     color: hsl(var(--quite-gray));
     border-radius: .25em;
     text-decoration: none;
-    transition: all .2s cubic-bezier(var(--transition-main), 1);
+    transition: all .2s ease-in-out; /* Cambiato il timing function */
 }
+
 .navbar-item-inner:hover {
     color: hsl(var(--white));
     background: hsl(var(--background-secondary-light));
     box-shadow: 0 17px 30px -10px hsla(var(--black), .25);
 }
+
 .navbar-item-inner-icon-wrapper {
     width: calc(5rem - 1em - 8px);
     position: relative;
 }
+
 .navbar-item-inner-icon-wrapper ion-icon {
     position: absolute;
     font-size: calc(var(--navbar-buttons) - 1rem);
 }
+
 .link-text {
     margin: 0;
     width: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
-    transition: all .35s cubic-bezier(var(--transition-main), 1);
+    transition: all .35s ease-in-out; /* Cambiato il timing function */
     overflow: hidden;
     opacity: 0;
 }
+
 #navbar:hover .link-text {
     width: calc(100% - calc(5rem - 8px));
     opacity: 1;
