Modifica alla gestione account e forum
Inserimento SignUp e Login, più inserimento modifiche al funzionamento del forum.

--- a/style/anime_game_style.css
+++ b/style/anime_game_style.css
@@ -57,6 +57,10 @@
     max-width: 100%; /* Imposta la larghezza massima al 100% del contenitore */
   }
   
+  p{
+    color:white;
+  }
+
   h2 {
     color: white; /* Colore del testo bianco */
     font-size: 36px; /* Dimensione del testo */
