Modifiche grafiche della WIKI ultimate
Completato assetto grafico delle pagine WIKI, anime e game, da terminare solo grafica dei forum riguardanti le pagine dopo completamento del back-end. Aggiunta funzione grafica per l'aggiunta di una WIKI tra i preferiti, da ultimare ultime piccole modifiche della pagina. Da fare successivamente grafica per la modifica utente, visualizzazione degli altri utenti, visualizzazione per l'aggiunta di una pagina e ultimi perfezionamenti della pagina.

--- a/style/anime_game_style.css
+++ b/style/anime_game_style.css
@@ -111,3 +111,12 @@
     border-radius: 5px;
     text-decoration: none;
   }
+
+
+  .dark {
+    background-color: #333;
+    color: #fff;
+    padding: 5px; /* Aggiunta di padding per migliorare l'aspetto */
+    border-radius: 5px; /* Aggiunta di angoli arrotondati per migliorare l'aspetto */
+    text-decoration: none; /* Rimozione della sottolineatura per migliorare l'aspetto */
+}
